--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,5 +1,27 @@
-<h1>New Food</h1>
+<h1>Create New Food</h1>
 
-<%= render 'form', food: @food %>
+<%= form_with scope: :food, url: foods_path, local: true do |form| %>
+  <p>
+    <%= form.label :name %><br>
+    <%= form.text_field :name %>
+  </p>
+
+  <p>
+    <%= form.label :price %><br>
+    <%= form.number_field :price %>
+  </p>
+ 
+  <p>
+    <%= form.label :ingredients %><br>
+    <%= form.collection_check_boxes(:ingredient_ids, Ingredient.all, :id, :name) do |ingredient| %>
+    	<br>
+    	<%= ingredient.label {ingredient.check_box + " " + ingredient.text} %>
+    <% end%>
+  </p>
+ 
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
 
 <%= link_to 'Back', foods_path %>
